@startuml
'https://plantuml.com/class-diagram

class IdentitySystem {
    - HashMap<id: String, Person> persons

    + addIdentity(id: String, person: Person): void
}

class PersonIdentity {
    + getInfo(id: String): Person
}

class Person {
    - name: String
    - lastName: String
    - birthDate: Date

    + getName(): String
    + getLastName(): String
    + getBirthDate(): Date
}

class BankSystem {
    + calculateAge(person: Person): int
    + checkOfferedLoan(person: Person): String
}

' relaciones

PersonIdentity "1" --> "0..*" Person
Person "1" --> "1" BankSystem
IdentitySystem "1" --> "n" PersonIdentity

@enduml